--- a/RN/RN.ipynb
+++ b/RN/RN.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# A10-Q2: RNN and BPTT"
+    "# RNN and BPTT"
    ]
   },
   {
