--- a/AdvAttack/Adv_attack.ipynb
+++ b/AdvAttack/Adv_attack.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# A11-Q2: Adversarial Attacks"
+    "# Adversarial Attacks"
    ]
   },
   {
